gcc/testsuite/g++.dg/cpp0x/variadic62.C
// { dg-options "-pedantic-errors" }
template<typename... Args> class tuple; // { dg-error "variadic templates" }
